# tensorrt-inference-optimizer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_EN.md  configure.yaml
bench/: benchmark.cpp  compare_engines.cpp
cfgs/: default.yaml
docs/: architecture.md  bevdet_master_one_migration_design.md  directory_layout.md  environment.md  int8_evaluation.md  local_artifacts.md  perf_report_template.md  pipeline.md  resume_project_brief.md  runbook.md  verification_report.md
engine/: builder.cpp  builder.h  calibrator.cpp  calibrator.h
include/: config.h  logger.h  utils.h
plugin/: alignbev_kernel_test.cu  bevpool_kernel_test.cu  bevpool_plugin.cpp  bevpool_plugin.h  bevpool_plugin_kernel.cu  gatherbev_kernel_test.cu  plugin_enqueue_smoke_test.cpp  plugin_registry.cpp
plugin/cuda/: alignbev_plugin_kernel.cu  gatherbev_plugin_kernel.cu
plugin/include/: alignbev_plugin.h  bevpool_plugin.h  gatherbev_plugin.h
plugin/src/: alignbev_plugin.cpp  gatherbev_plugin.cpp
plugin/tests/: plugin_chain_trt_test.cpp  plugin_minimal_trt_test.cpp
runtime/: bev_align_cuda.cu  bev_align_cuda.h  bevpool_cuda.cu  bevpool_cuda.h  buffer_manager.cpp  buffer_manager.h  infer.cpp  infer.h  two_stage_pipeline.cpp  two_stage_pipeline.h
scripts/: build.sh  generate_bevpool_indices.py  generate_dummy_calib.py  int8_fp16_report.py  oneclick_ci.sh  plugin_correctness.py  run.sh  run_checkpoint_trt.sh  run_ptq_baseline.sh
src/: config.cpp  demo_main.cpp
tools/: build.sh  export_engine.py  generate_identity_transforms.py  generate_transform_sequence_from_samples.py  int8_fp16_report.py  oneclick_ci.sh  profile.sh  run.sh  run_checkpoint_trt.sh  run_demo.sh  run_ptq_baseline.sh
tools/bevdet_export/: export_onnx.py
